v5.7
-----
+ Adds Steam review percentage of most helpful positive and negative reviews on app pages

v5.6.1
-----
: Fix Early Access overlays on Steam homepage

v5.6
-----
+ Added ability to add a custom amount to your Steam wallet
+ Added checkboxes to DLC list on app pages, letting you select certain DLC and add to cart easily
+ Added sort option to badge page to sort by number of card drops remaining
+ Added card prices to market links on badge pages
+ Added "cost to complete badge" to unobtained badges
+ Added option to display advanced navigation on inventory pages
+ Added foil badge and foil badge progress to app pages
: Updated Early Access banner graphics (thanks SolventSnake!)
- Removed function to add all unowned DLC to cart on app pages due to conflicts with new feature

v5.5
-----
+ Added "Early Access" image banners to Early Access games on Steam
+ Added a list of friends that own a game on the "friends that own" page
+ Added badge progress and remaining card drops to app pages
: Fixed bug where badge filter wasn't working with some languages
: Fixed bug in wishlist sorting that would cause it to fail if a game had no price displayed
: Fixed bug that caused wishlist not to highlight under certain circumstances

v5.4
-----
+ Added option to hide DLC for games you do not own
+ Added option to add button on app pages to test your system requirements in Steam (experimental!)
+ Sorting wishlist by discount now additionally subsorts by price (lowest -> highest)
: Fixed inventory market price check displaying "Sold!" when looking up prices
: Fixed bug where inventory market price check wasn't displaying for some users
: Fixed bug where Holiday Snow Globes weren't highlighting in the marketplace
: Fixed bug where DRM warnings weren't displaying under certain conditions
: Fixed bug where holiday snowglobe background was displaying in Library mode

v5.3.3
-----
+ Added highlighting to Community Choice games on homepage